Working on predicting create3 address

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,6 +40,8 @@ url = "2"
 uuid = { version = "1.10", features = ["v4"] }
 web3 = { git = "https://github.com/scx1332/rust-web3", branch = "master" }
 zstd = "0.13.2"
+hex = "0.4.3"
+tiny-keccak = "2.0.2"
 
 [features]
 default = ["proxy"]
