--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
         "ethers": "^6.13",
         "luxon": "^3.0",
         "plotly.js": "^2.35.2",
+        "prismjs": "^1.29.0",
         "react": "^18.2",
         "react-dom": "^18.2",
         "react-icons": "^4.7",
@@ -19,12 +20,14 @@
         "react-plotly.js": "^2.6.0",
         "react-router": "^6.3",
         "react-router-dom": "^6.3",
+        "react-simple-code-editor": "^0.14.1",
         "react-use-websocket": "^4.5.0"
     },
     "devDependencies": {
         "@types/jest": "^28.1",
         "@types/luxon": "^3.0",
         "@types/node": "^18.7",
+        "@types/prismjs": "^1.26.5",
         "@types/react": "^18.0",
         "@types/react-dom": "^18.0",
         "@types/react-plotly.js": "^2.5",
