--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ dotenvy = "0.15.7"
 env_logger = "0.11"
 eth-blockies = "1.1"
 futures-util = "0.3"
+hex = "0.4.3"
 lazy_static = "1.5"
 lettre = "0.11.9"
 log = "0.4"
@@ -40,13 +41,14 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 sha2 = "0.10"
 sqlx = { version = "0.8", features = ["sqlite", "chrono", "runtime-tokio"] }
+strum = "0.26.3"
+strum_macros = "0.26.4"
+tiny-keccak = "2.0.2"
 tokio = "1"
 url = "2"
 uuid = { version = "1.10", features = ["v4"] }
 web3 = { git = "https://github.com/scx1332/rust-web3", branch = "master" }
 zstd = "0.13.2"
-hex = "0.4.3"
-tiny-keccak = "2.0.2"
 
 [features]
 default = ["proxy"]
