--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,6 +37,7 @@ reqwest = "0.12.8"
 rust-embed = "8"
 rust_decimal = "1.36"
 rustc-hex = "2"
+secp256k1 = "0.30.0"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 sha2 = "0.10"
