--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ actix-files = "0.6"
 actix-multipart = "0.7"
 actix-rt = "2.10"
 actix-session = { version = "0.10", features = ["cookie-session"] }
-actix-web = "4.9"
+actix-web = "4.10"
 actix-web-httpauth = "0.8"
 awc = { version = "3", features = ["rustls"] }
 bollard = { version = "0.18.1" }
@@ -20,19 +20,19 @@ censor = "0.3.0"
 chrono = { version = "0.4", features = ["serde"] }
 clap = { version = "4", features = ["cargo", "derive"] }
 dotenv = "0.15"
-dotenvy = "0.15.7"
+dotenvy = "0.15"
 env_logger = "0.11"
 eth-blockies = "1.1"
 futures-util = "0.3"
 hex = "0.4.3"
 lazy_static = "1.5"
-lettre = "0.11.9"
+lettre = "0.11"
 log = "0.4"
 mime_guess = "2"
-oauth2 = "4.4"
+oauth2 = { version = "5.0", features = ["reqwest"] }
 pbkdf2 = { version = "0.12", features = ["simple"] }
 percent-encoding = "2.3"
-rand = "0.8"
+rand = "0.9"
 reqwest = "0.12.8"
 rust-embed = "8"
 rust_decimal = "1.36"
@@ -42,15 +42,15 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 sha2 = "0.10"
 sqlx = { version = "0.8", features = ["sqlite", "chrono", "runtime-tokio"] }
-strum = "0.26.3"
-strum_macros = "0.26.4"
+strum = "0.27"
+strum_macros = "0.27"
 tiny-keccak = "2.0.2"
 tokio = "1"
 url = "2"
 uuid = { version = "1.10", features = ["v4"] }
 web3 = { git = "https://github.com/scx1332/rust-web3", branch = "master" }
-zstd = "0.13.2"
-regex = "1.11.1"
+zstd = "0.13"
+regex = "1.11"
 
 [features]
 default = ["proxy"]
