--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ lettre = "0.11"
 log = "0.4"
 mime_guess = "2"
 oauth2 = { version = "5.0", features = ["reqwest"] }
+parking_lot = "0.12"
 pbkdf2 = { version = "0.12", features = ["simple"] }
 percent-encoding = "2.3"
 rand = "0.9"
