Working on cool gpu icon

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,7 +39,9 @@
         "eslint-plugin-import": "^2.26",
         "eslint-plugin-jsx-a11y": "^6.6",
         "eslint-plugin-react": "^7.31",
+        "framer-motion": "^12.6.2",
         "prettier": "^2.8",
+        "react-countup": "^6.5.3",
         "serve": "^14.2",
         "typescript": "^4.9",
         "vite": "^4.0",
