Working on managing golem node

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -52,6 +52,7 @@ uuid = { version = "1.10", features = ["v4"] }
 web3 = { git = "https://github.com/scx1332/rust-web3", branch = "master" }
 zstd = "0.13"
 regex = "1.11"
+toml = "0.8.20"
 
 [features]
 default = ["proxy"]
