--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ bollard = { version = "0.18.1" }
 censor = "0.3.0"
 chrono = { version = "0.4", features = ["serde"] }
 clap = { version = "4", features = ["cargo", "derive"] }
+ctrlc = "3.4"
 dotenv = "0.15"
 dotenvy = "0.15"
 env_logger = "0.11"
